plugins/themes/journals-resources/styles/custom.less
/* variables */

@border: 1px solid #dee2e6;
@color-main: #2c6bac;
@color-highlight: #1a9fff;
@max-width: 1140px;

/* journals home styles */

body {
	color: #212529;
	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
	font-size: 17px;
	font-weight: 400;
	line-height: 1.5;
	margin: 0;
	padding: 0;
}

img {
	max-width: 100%;
}

h2 {
	font-size: 2rem;
	font-weight: 500;
	line-height: 1.2;
}

a {
	color: @color-main;
}

/* general layout */

header,
.page {
	margin: 25px auto;
	max-width: @max-width;
	padding: 0 20px;
}

.page {
  border: @border;
  max-width: 1000px;
  padding: 35px 100px;
}

/* header */

header {
	margin: 0 auto;
	padding: 50px 20px 8px 20px;

	& h1 {
		margin: 0;
	}

	& h1 img {
		width: 100%;
	}

	& h1 span {
		left: -1000px;
		position: absolute;
	}

	& svg {
		height: auto;
		width: 100%;
	}
}

/* cover */

.cover {
	border-top: 1px solid rgba(0,0,0,0.1);
}

.cover img {
	max-width: 100%;
	width: 100%;
}

/* page */





/* main */

// .mission {
// 	background: #f8f9fa;
// 	display: flex;
// 	margin-top: 15px;
// 	padding: 40px;
// }

// .mission p.intro {
// 	flex: 4;
// 	font-size: 1.3rem;
// 	margin: 0 50px 0 0;
// }

// .mission p.email {
// 	flex: 1;
// 	margin-top: 5px;
// }

// .publishing {
// 	border: @border;
// 	display: flex;
// 	padding: 0;
// }

// .publishing div {
// 	flex: 1;
// 	padding: 20px 40px;
// }

// .publishing div:first-child {
// 	border-right: @border;
// }

/* journals */

// .journals {
// 	background: #f8f9fa;
// 	padding: 30px 0;
// }

// .journals h2 {
// 	margin-top: 0;
// 	text-align: center;
// }

// .journals h3 {
// 	font-size: .85rem;
// 	font-weight: 400;
// 	line-height: 1.3;
// 	margin: 1px 0;
// }

// .journals ul {
// 	display: flex;
// 	flex-wrap: wrap;
// 	margin-bottom: 0;
// 	padding: 10px 40px;
// }

// .journals li {
// 	list-style: none;
// 	max-width: 210px;
// 	padding: 0 35px 50px 35px;
// }

// .journals a {
// 	display: block;
// 	text-decoration: none;
// }

// .journals a img {
// 	box-shadow: 0 0 4px #ccc;
// 	transform: translate(0,-0);
// 	transition: all 250ms;
// }

// .journals a:hover img {
// 	transform: translate(4px,-4px);
//   transition-delay: 0s;
// }

/* footer */

footer {
	background: #093552;
	color: white;
	padding: 20px 0 50px 0;
}

footer h2,
footer p {
	margin: 25px auto;
	max-width: @max-width;
	padding: 0 20px;
}

footer h2 {
  font-size: 1.5rem;
}

footer a {
	color: white;
	font-weight: bold;
}

/* login page */

.page_login {
	border: 1px solid #ddd;
	border-radius: 4px;
	box-shadow: 0 0 4px #ddd;
	margin: 23px auto;
	max-width: 500px;
	padding: 20px;
}

/* small screens */

@media screen and (max-width: 800px) {

	header {
		padding: 0 20px;
	}

	// .mission,
	// .publishing {
	// 	border: 0;
	// 	display: block;
	// }

	// .mission,
	// .publishing div {
	// 	background: white;
	// 	padding: 0 20px;
	// }

	// .mission p.intro {
	// 	font-size: 1rem;
	// 	margin: 0;
	// }

	// .mission p.email {
	// 	margin: 25px 0;
	// }

	// .journals li {
	// 	max-width: 140px;
	// 	padding: 0 20px 50px 20px;
	// }
}

